# smart

./: Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt
src/smart/: __init__.py  cli.py  data2features.py  model.py
src/smart/config/: config.yaml
tests/: test_data_iris.py
