[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart"
version = "1.0.0"
description = "Short-horizon Market Risk Predicting and Trading"
readme = "README.md"
requires-python = ">=3.8"

authors = [
  {name = "Hanice Sun", email = "hansun@stanford.edu"}
]

[project.urls]
"Homepage" = "https://github.com/HaniceSun/smart"

[project.scripts]
smart = "smart.cli:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
smart = ["data/*.txt*", "config/*.yaml"]
